vlib/v/checker/tests/assign_array_init_with_no_type.vv
fn main() {
	mut x := []
	println(x)
}
